--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
   <title>Sign-up form</title>
 </head>
 
 <body>
+  <div class="page-container">
+    <div class="left">
+      <div class="wrapper">
+        <div class="header">
+          <img class="logo" src="./img/logo.png" alt="logo">
+          <h1 class="heading-text">Roomify</h1>
+        </div>
+        <p class="small-paragraph">Photo by Spacejoy on Unsplash</p>
+      </div>
+    </div>
+
+    <section class="right">
+      <p class="regular-paragraph">This is not a real online service! You know you need something like this
+        in your life to help you realize your deepest dreams. <br>Sign up now to get started.
+      </p>
+      <p class="regular-paragraph">You know you want to.</p>
+      <form action="">
+        <p class="regular-paragraph">Lets do this!</p>
+      </form>
+      <div class="btns">
+        <button class="create-account-btn">Create Account</button>
+      </div>
+
+      <p class="medium-paragraph">Already have an account? <span class="text-login">Log in</span></p>
+    </section>
+  </div>
 
 </body>
 
