--- a/index.html
+++ b/index.html
@@ -32,31 +32,31 @@
           <p class="regular-paragraph">Let's do this!</p>
           <div class="form-left">
             <div class="form-field">
-              <label for="">First Name</label>
-              <input type="text" required>
+              <label for="firstname">First Name</label>
+              <input type="text" required name="firstname" id="firstname">
             </div>
             <div class="form-field">
-              <label for="">Email</label>
-              <input type="email" required>
+              <label for="email">Email</label>
+              <input type="email" required id="email" name="email">
             </div>
             <div class="form-field">
-              <label for="">Password</label>
-              <input type="password" required>
+              <label for="password">Password</label>
+              <input type="password" required minlength="6" id="password" name="password">
               <p class="medium-paragraph error-message"></p>
             </div>
           </div>
           <div class="form-right">
             <div class="form-field">
-              <label for="">Last Name</label>
-              <input type="text" required>
+              <label for="lastname">Last Name</label>
+              <input type="text" required name="lastname" id="lastname">
             </div>
             <div class="form-field">
-              <label for="">Phone Number</label>
-              <input type="tel" required>
+              <label for="phone">Phone Number</label>
+              <input type="tel" required name="phone" id="phone">
             </div>
             <div class="form-field">
-              <label for="">Confirm Password</label>
-              <input type="password" required>
+              <label for="confirmpassword">Confirm Password</label>
+              <input type="password" required minlength="6" id="confirmpassword" name="confirmpassword">
             </div>
           </div>
         </form>
